# pokemon-kafka

./: .gitignore  LICENSE  README.md  SKILL.md  docker-compose.yml  jcard.toml  pyproject.toml  rom
data/dbg/: fitness.json
demo-runs/: README.md
docs/: demo-prompts.md  parcel-quest-navigation-milestones.md  talk-demo-outline.md  worktree.md
references/: routes.json  routes.yellow.json
scripts/: agent.py  autotune_bridge.py  diagnose.py  discovery.py  entrypoint.sh  evolve.py  game_events.py  game_profile.py  healer.py  historical_observer.py  install.sh  live_producer.py  memory_reader.py  memory_writer.py  observe_cli.py  observer.py  paper_reader.py  parcel_quest.py  publisher.py  recorder.py  run_10_agents.py  text_decoder.py  world_map.py
tests/: conftest.py  test_agent.py  test_agent_quest_coverage.py  test_alerts_consumer.py  test_autotune_bridge.py  test_discovery.py  test_evolve.py  test_fixture_run.py  test_game_event_bridge.py  test_game_events.py  test_game_profile.py  test_healer.py  test_live_producer.py  test_memory_reader.py  test_memory_reader_profile.py  test_memory_writer.py  test_observe_cli.py  test_observer.py  test_paper_reader.py  test_parcel_quest.py  test_publisher.py  test_recorder.py  test_rom_smoke.py  test_run_10_agents.py  test_self_heal.py  test_text_decoder.py  test_viewer_alerts_tail.py  test_viewer_feed.py  test_viewer_heal.py  test_viewer_live.py  test_viewer_server.py  test_viewer_store.py  test_world_map.py
viewer/: __init__.py  __main__.py  alerts_tail.py  feed.py  heal.py  live.py  server.py  store.py
(+91 files in other folders)
